plugins {
  id 'com.google.cloud.tools.jib' version '3.4.4'
  id 'org.springframework.boot' version '3.4.3'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'java'
}

group = 'com.github.r6q'
version = '1.0.0-SNAPSHOT'
sourceCompatibility = '23'

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
  compileTestJava {
    extendsFrom testAnnotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-web'

  implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.18.3'

  implementation 'net.logstash.logback:logstash-logback-encoder:8.0'

  implementation 'org.flywaydb:flyway-core'
  implementation 'org.flywaydb:flyway-mysql'

  implementation 'org.mapstruct:mapstruct:1.6.3'

  implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
  implementation 'org.mybatis:mybatis:3.5.19'

  implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'

  compileOnly 'org.projectlombok:lombok'

  runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

  annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
  annotationProcessor 'org.projectlombok:lombok'

  testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'

  testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.withType(JavaCompile).each {
  it.options.compilerArgs.add('--enable-preview')
}

test {
  jvmArgs += "--enable-preview"
  useJUnitPlatform {
    excludeTags("itest")
  }
}


def itest = tasks.register("itest", Test) {
  jvmArgs += "--enable-preview"
  group("verification")
  description("Runs the integration tests.")
  shouldRunAfter("test")
  useJUnitPlatform {
    includeTags("itest")
  }
}

tasks.named("check") {
  dependsOn(itest)
}
